# expense_visualization_tool

./: CMakeLists.txt  Main.qml  README.md
android/: AndroidManifest.xml
android/res/drawable/: ic_launcher_bg.xml
android/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android/res/values/: colors.xml  styles.xml
calculation/: calculation.cpp
currency/: currency.cpp  currency.h
docs/: README.CN.md  README.JA.md  README.md
docs/instructions/: Demo Video List.md  demo_video_list.md  installation.md
docs/modeling/: class_diagram.xml  sequence_diagram.xml  state_chart.xml  use_case_diagram.xml
docs/pre_webpage/: index.html
docs/testing/: Black Box Testing Report.md  EC and BVA Testing Report.md  black_box_testing.txt
graph/: graph.cpp  graph.h
items/: item.cpp
language/: language_manager.cpp  language_manager.h
qml/: DateTimePicker.qml  Home_ItemList.qml  Home_NaviBar.qml  Home_Page.qml  Settings_Page.qml
sorting/: sorting.cpp  sorting.h
src/: main.cpp
src/calculation/: calculation.cpp  calculation.h
src/currency/: currency.cpp  currency.h
src/graph/: graph.cpp  graph.h
src/items/: item.cpp  item.h
src/language/: language_manager.cpp  language_manager.h
src/sorting/: sorting.cpp
src/translations/: zh_CN.ts
translations/: ja_JP.qm  ja_JP.ts  zh_CN.qm  zh_CN.ts
ui/: Color.qml  DateTimePicker.qml  Detail_EditDialog.qml  Detail_Page.qml  Example_Item.qml  Home_AddItemDialog.qml  Home_HeaderBar.qml  Home_ItemList.qml  Home_NaviBar.qml  Home_Page.qml  Main.qml  Settings_Page.qml
ui/icons/: resources.qrc
